fix hover on mobile-menu

--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -52,7 +52,9 @@
     flex-direction: column;
     gap: 24px;
     margin-top: 68px;
-    margin-bottom: auto;    
+    margin-bottom: auto; 
+    margin-left: -16px;
+    margin-right: -16px;   
 
 }
 
@@ -61,6 +63,8 @@
     // justify-content: space-between;
     align-items: center;
     padding: 6px 0;
+    padding-left: 16px;
+    padding-right: 16px;
     &:hover {
         background-color: $hover-bg-color;
         .menu-bar__icon-arrow {
